fixed alignment issues on country cards

--- a/src/index.css
+++ b/src/index.css
@@ -220,13 +220,15 @@ body{
 }
 
 .grid .country-info h3{
+  padding-top: 10px;
   padding-bottom: 10px;
   font-weight: 900;
-  font-size: 22px;
+  font-size: 19px;
 }
 
 .grid .country-info h4{
   padding-bottom: 5px;
+  font-size: 16px;
   font-weight: 600;
 }
 
@@ -267,7 +269,7 @@ header.light-theme {
   color: var(--light-mode-text);
 }
 
-.filter .custom-select .select-btn .options.light-theme{
+.filter .custom-select .options.light-theme{
   background-color: var(--text-color);
 
 }
@@ -349,7 +351,7 @@ header.light-theme {
   }
   .grid{
     grid-template-columns: repeat(4, 1fr);
-    gap: 60px;
+    gap: 30px;
   }
 }
 
